RESOLVED FIXED27321
v8 bindings missing from the build
https://bugs.webkit.org/show_bug.cgi?id=27321
Summary v8 bindings missing from the build
Andrew Wilson
Reported 2009-07-15 15:44:37 PDT
In addition to being added to the .gypi files, apparently all new V8 bindings must also be added to the DerivedSourcesAllInOne.cpp file. Both V8AbstractWorker.cpp and V8SharedWorker.cpp are missing from this file, which causes link errors in Chromium when SHARED_WORKERS is enabled.
Attachments
proposed patch that fixes the windows build when ENABLE_SHARED_WORKERS=true (6.52 KB, patch)
2009-07-16 12:04 PDT, Andrew Wilson
levin: review+
Andrew Wilson
Comment 1 2009-07-15 17:05:31 PDT
Also, the vcproj files are missing the SHARED_WORKER flags and associated files.
Andrew Wilson
Comment 2 2009-07-16 12:03:48 PDT
Of course, since the V8 bindings are missing, the JSC bindings were also missing. I'm chagrined to find that we manually keep parallel lists of DerivedSources files separate from the build config. Who knew?
Andrew Wilson
Comment 3 2009-07-16 12:04:47 PDT
Created attachment 32885 [details] proposed patch that fixes the windows build when ENABLE_SHARED_WORKERS=true
David Levin
Comment 4 2009-07-16 13:17:26 PDT
Comment on attachment 32885 [details] proposed patch that fixes the windows build when ENABLE_SHARED_WORKERS=true The new modes being set on: WebCore/bindings/v8/custom/V8AbstractWorkerCustom.cpp WebCore/bindings/v8/custom/V8SharedWorkerCustom.cpp Seem odd (to both of us). I'll remove them from the patch when I land it.
David Levin
Comment 5 2009-07-16 13:18:19 PDT
Assigned to levin for landing.
David Levin
Comment 6 2009-07-16 17:38:11 PDT
Note You need to log in before you can comment on or make changes to this bug.