2009-07-16  Drew Wilson  <atwilson@google.com>

Reviewed by David Levin.

        Added SHARED_WORKER flag to Windows build files, as well as associated .ccp/.h files.
        Added missing V8 bindings to the AllInOne file

        https://bugs.webkit.org/show_bug.cgi?id=27321

        * WebCore.vcproj/WebCore.vcproj:
        Added missing files to build.
        * bindings/v8/DerivedSourcesAllInOne.cpp:
        Added missing V8 bindings (V8AbstractWorker.cpp and V8SharedWorker.cpp)
        * DerivedSources.cpp
        Added missing JS bindings (JSAbstractWorker.cpp and JSSharedWorker.cpp)

Canonical link: https://commits.webkit.org/37621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45997 268f45cc-cd09-0410-ab3c-d52691b4dbfc